fix race condition in LogEntriesObservableList